# docs/swagger.yaml
@@ -35,14 +35,14 @@ definitions:
       login_time:
         description: 登录时间
         type: string
+      name:
+        description: 登录管理员姓名
+        type: string
       roles:
         description: .
         items:
           type: string
         type: array
-      user_name:
-        description: 登录管理员姓名
-        type: string
     type: object
   dto.AdminLoginInput:
     properties:
@@ -689,99 +689,99 @@ definitions:
     type: object
   po.ServiceAccessControl:
     properties:
-      blackList:
+      black_list:
         type: string
-      clientIPFlowLimit:
+      clientip_flow_limit:
         type: integer
       id:
         type: integer
-      openAuth:
+      open_auth:
         type: integer
-      serviceFlowLimit:
+      service_flow_limit:
         type: integer
-      serviceID:
+      service_id:
         type: integer
-      whiteHostName:
+      white_host_name:
         type: string
-      whiteList:
+      white_list:
         type: string
     type: object
   po.ServiceGRPCRule:
     properties:
-      headerTransfor:
+      header_transfor:
         type: string
       id:
         type: integer
       port:
         type: integer
-      serviceID:
+      service_id:
         type: integer
     type: object
   po.ServiceHTTPRule:
     properties:
-      headerTransfor:
+      header_transfor:
         type: string
       id:
         type: integer
-      needHTTPs:
+      need_https:
         type: integer
-      needStripUri:
+      need_strip_uri:
         type: integer
-      needWebsocket:
+      need_websocket:
         type: integer
       rule:
         type: string
-      ruleType:
+      rule_type:
         type: integer
-      serviceID:
+      service_id:
         type: integer
-      urlRewrite:
+      url_rewrite:
         type: string
     type: object
   po.ServiceInfo:
     properties:
-      createdAt:
+      create_at:
         type: string
       id:
         type: integer
-      isDelete:
+      is_delete:
         type: integer
-      loadType:
+      load_type:
         type: integer
-      serviceDesc:
+      service_desc:
         type: string
-      serviceName:
+      service_name:
         type: string
-      updatedAt:
+      update_at:
         type: string
     type: object
   po.ServiceLoadBalance:
     properties:
-      checkInterval:
+      check_interval:
         type: integer
-      checkMethod:
+      check_method:
         type: integer
-      checkTimeout:
+      check_timeout:
         type: integer
-      forbidList:
+      forbid_list:
         type: string
       id:
         type: integer
-      iplist:
+      ip_list:
         type: string
-      roundType:
+      round_type:
         type: integer
-      serviceID:
+      service_id:
         type: integer
-      upStreamConnectTimeout:
+      upstream_connect_timeout:
         type: integer
-      upStreamHeaderTimeout:
+      upstream_header_timeout:
         type: integer
-      upStreamIdleTimeout:
+      upstream_idle_timeout:
         type: integer
-      upStreamMaxIdle:
+      upstream_max_idle:
         type: integer
-      weightList:
+      weight_list:
         type: string
     type: object
   po.ServiceTCPRule:
@@ -790,7 +790,7 @@ definitions:
         type: integer
       port:
         type: integer
-      serviceID:
+      service_id:
         type: integer
     type: object
 host: 127.0.0.1:8080
